# asyncio-signal-bus

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  workflow.yml
examples/: example.py
src/asyncio_signal_bus/: ErrorHandler.py  __init__.py  batch_counter.py  error_handler.py  exception.py  injector.py  periodic_task.py  publisher.py  queue_getter.py  signal_bus.py  subscriber.py  types.py
tests/: integration_test.py  test_batch_counter.py  test_injector.py  test_publisher.py  test_signal_bus.py  test_subscriber.py
