[tool.poetry]
name = "asyncio-signal-bus"
version = "1.5.2"
description = "Internal application publisher/subscriber bus using asyncio queues."
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
readme = "README.md"
packages = [{include = "asyncio_signal_bus", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
flake8 = "^7.1.1"
pytest-asyncio = "^0.24.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

