[tool.poetry]
name = "asyncio-signal-bus"
version = "1.6.0"
description = "Internal application publisher/subscriber bus using asyncio queues."
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
readme = "README.md"
packages = [{include = "asyncio_signal_bus", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I", "F", "PT"]


